# Hackathon

arm_ctrl/src/candybot/: CMakeLists.txt  package.xml
arm_ctrl/src/candybot/ros/scripts/: candybot_start.py
arm_ctrl/src/candybot/src/candybot_joint_control_node/: KukaJointController.py  candybot_node.py  gui.py
arm_ctrl/src/my_kinect_proj/: CMakeLists.txt  package.xml
arm_ctrl/src/my_kinect_proj/scripts/: KukaJointController.py  gui.py  talker.py  talker.py~  youb.py  youb.py~
planner/: CMakeLists.txt  PlannerFlowChart.dia  package.xml
planner/src/: planner_class.py  planner_use_jointvelocities.py  planner_user.py
